get data from a fake api

--- a/04.parse-data/index.html
+++ b/04.parse-data/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="container">
     <button>get information</button>
-    <h2>Customer</h2>
+    <h2>Customers</h2>
     <div class="output"></div>
    </div>
     <script src="js/script.js"></script>
